blog/style.css
@import url('https://fonts.googleapis.com/css?family=Lato|Abhaya+Libre');
* {
    box-sizing: border-box;
}


/*********************** Reset starts ***********************/


/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}


/* HTML5 display-role reset for older browsers */

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
    display: block;
}

body {
    line-height: 1;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

blockquote:before, blockquote:after, q:before, q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}


/*********************** Reset ends ***********************/


/*********************** Reset ends ***********************/


/* COLOR AND STUFF

link green color: #29C6CD
hightlight orange: rgba(243, 156, 18, .5);

*/

a {
    text-decoration: none;
    color: #1ABC9C;
}

a:hover {
    background-color: rgba(243, 156, 18, .5);
}

article h2{
  text-transform: uppercase;
}

article{
  width: 600px;
}

#blog-col{
  width: 800px;
  margin: auto;
}

body {
    font-family: 'Lato', sans-serif;
    color: #475053;
    font-size: 11pt;
    width: 800px;
    margin: auto;
    line-height: 2em;
}

footer {
    clear: both;
    align-items: center;
}

footer li {
    display: inline;
    padding-right: 50px;
}

h1 {
    font-size: 25pt;
    text-transform: uppercase;
    letter-spacing: .5em;
}

h2 {
    letter-spacing: .2em;
    font-size: 18pt;
    padding-bottom: .5em;
    font-family: 'Abhaya+Libre';
    color: #808080;
}

h1, section, footer {
    padding-top: 60px;
    padding-bottom: 60px;
}

img{
  padding: 20px;
  box-shadow: 0px 5px 5px -5px rgba(148,232,215,1);
}

img:hover{
  box-shadow: 0px 0px 32px -2px rgba(148,232,215,1);

}
#time-published{
  color: #D3D3D3;

}

